Adjusted footer for all pages

--- a/product pages/bodybutter.html
+++ b/product pages/bodybutter.html
@@ -1,133 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Nature's Veil | Body Butter</title>
-        <link rel="stylesheet" href="../css/style.css">
-        <script src="https://kit.fontawesome.com/a2e0e9d6a8.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    </head>
-    <body>
-        <!-- Navbar -->
-        <header class="navbar">
-            <div class="container nav-container">
-                <img class="logo" src="../images/logo/Modern_Wordmark_Logo_for_Nature_s_Veil__Design_2_-removebg-preview.png" alt="Nature's Veil Logo Image"/>
-                <div class="menu-toggle"><i class="fa-solid fa-bars"></i></div>
-                <nav class="nav-links">
-                    <a href="../index.html">Home</a>
-                    <a href="../shop.html">Shop</a>
-                    <a href="../account.html" id="accountLink">My Account</a>
-                    <a href="../cart.html">
-                        <i class="fa-solid fa-cart-shopping"></i>
-                        <span class="cart-count" id="cartCount">0</span>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nature's Veil | Body Butter</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <script src="https://kit.fontawesome.com/a2e0e9d6a8.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
+
+<body>
+    <!-- Navbar -->
+    <header class="navbar">
+        <div class="container nav-container">
+            <img class="logo"
+                src="../images/logo/Modern_Wordmark_Logo_for_Nature_s_Veil__Design_2_-removebg-preview.png"
+                alt="Nature's Veil Logo Image" />
+            <div class="menu-toggle"><i class="fa-solid fa-bars"></i></div>
+            <nav class="nav-links">
+                <a href="../index.html">Home</a>
+                <a href="../shop.html">Shop</a>
+                <a href="../account.html" id="accountLink">My Account</a>
+                <a href="../cart.html">
+                    <i class="fa-solid fa-cart-shopping"></i>
+                    <span class="cart-count" id="cartCount">0</span>
+                </a>
+            </nav>
+        </div>
+    </header>
+    <!-- Product Section -->
+    <section class="product-page">
+        <div class="container product-container">
+            <!-- Product Gallery -->
+            <div class="product-gallery">
+                <img id="mainImage" src="../images/products/Nature's Veil Body Butter.png" alt="Body Butter image">
+            </div>
+            <!-- Product Info -->
+            <div class="product-info">
+                <h2>Body Butter</h2>
+                <p class="price">R389.00</p>
+                <p class="description">
+                    Deep nourishment for velvety-soft skin.
+                    Our rich, whipped body butter melts on contact, delivering intense hydration through shea butter,
+                    cocoa butter, and sweet almond oil. Perfect for dry areas and after-shower moisture sealing.
+                </p>
+                <button class="btn-add">Add to Cart</button>
+                <!-- Ratings -->
+                <div class="ratings">
+                    <span>⭐️⭐️⭐️⭐️☆</span>
+                    <p>4 reviews</p>
+                </div>
+                <!-- Reviews -->
+                <div class="reviews">
+                    <div class="review">
+                        <strong>Jane D.</strong>
+                        <p>I use it after a shower and my skin stays silky until the next day.</p>
+                    </div>
+                    <div class="review">
+                        <strong>Emma R.</strong>
+                        <p>A little goes a long way! Perfect for dry elbows and knees.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Suggested Products -->
+        <section class="suggested">
+            <h3>You may also like</h3>
+            <div class="product-grid">
+                <div class="product-card">
+                    <a href="handcream.html?product=handcream">
+                        <img src="../images/products/Nature's Veil Hand cream (1).png" alt="Hand Cream image">
+                        <h3>Hand Cream</h3>
                     </a>
-                </nav>
-            </div>
-        </header>
-        <!-- Product Section -->
-        <section class="product-page">
-            <div class="container product-container">
-                <!-- Product Gallery -->
-                <div class="product-gallery">
-                    <img id="mainImage" src="../images/products/Nature's Veil Body Butter.png" alt="Body Butter image">
+                    <p>R119.00</p>
                 </div>
-                <!-- Product Info -->
-                <div class="product-info">
-                    <h2>Body Butter</h2>
-                    <p class="price">R389.00</p>
-                    <p class="description">
-                        Deep nourishment for velvety-soft skin.
-Our rich, whipped body butter melts on contact, delivering intense hydration through shea butter, cocoa butter, and sweet almond oil. Perfect for dry areas and after-shower moisture sealing.
-                    </p>
-                    <button class="btn-add">Add to Cart</button>
-                    <!-- Ratings -->
-                    <div class="ratings">
-                        <span>⭐️⭐️⭐️⭐️☆</span>
-                        <p>4 reviews</p>
-                    </div>
-                    <!-- Reviews -->
-                    <div class="reviews">
-                        <div class="review">
-                            <strong>Jane D.</strong>
-                            <p>I use it after a shower and my skin stays silky until the next day.</p>
-                        </div>
-                        <div class="review">
-                            <strong>Emma R.</strong>
-                            <p>A little goes a long way! Perfect for dry elbows and knees.</p>
-                        </div>
-                    </div>
+                <div class="product-card">
+                    <a href="iron.html?product=iron">
+                        <img src="../images/products/Nature's Veil Iron.png" alt="Iron Vitamin image">
+                        <h3>Iron</h3>
+                    </a>
+                    <p>R135.00</p>
+                </div>
+                <div class="product-card">
+                    <a href="shakevanilla.html?product=shakevanilla">
+                        <img src="../images/products/Nature's Veil Shake Vanilla.png" alt="Vanilla Shake image">
+                        <h3>Lifestyle Shake Vanilla</h3>
+                    </a>
+                    <p>R629.00</p>
                 </div>
             </div>
-            <!-- Suggested Products -->
-            <section class="suggested">
-                <h3>You may also like</h3>
-                <div class="product-grid">
-                    <div class="product-card">
-                        <a href="handcream.html?product=handcream">
-                            <img src="../images/products/Nature's Veil Hand cream (1).png" alt="Hand Cream image">
-                            <h3>Hand Cream</h3>
-                        </a>
-                        <p>R119.00</p>
-                    </div>
-                    <div class="product-card">
-                        <a href="iron.html?product=iron">
-                            <img src="../images/products/Nature's Veil Iron.png" alt="Iron Vitamin image">
-                            <h3>Iron</h3>
-                        </a>
-                        <p>R135.00</p>
-                    </div>
-                    <div class="product-card">
-                        <a href="shakevanilla.html?product=shakevanilla">
-                            <img src="../images/products/Nature's Veil Shake Vanilla.png" alt="Vanilla Shake image">
-                            <h3>Lifestyle Shake Vanilla</h3>
-                        </a>
-                        <p>R629.00</p>
-                    </div>
+        </section>
+        <footer>
+            <section class="footer-container">
+                <div class="footer-box border">
+                    <h3>Information</h3>
+                    <a href="../shipping.html">Shipping</a>
+                    <br>
+                    <a href="../terms.html">T & C</a>
+                    <br>
+                    <a href="../contact.html">Contact Us</a>
+                </div>
+                <div class="footer-box">
+                    <h3>My Account</h3>
+                    <a href="../account.html">My Account</a>
+                    <br>
+                    <a href="../cart.html">Shopping cart</a>
                 </div>
             </section>
-            <footer>
-                <section class="footer-container">
-                    <div class="footer-box border">
-                        <h3>Information</h3>
-                        <a href="">Shipping</a>
-                        <br>
-                        <a href="">The Consumer Protection Act</a>
-                        <br>
-                        <a href="">T & C</a>
-                        <br>
-                        <a href="">Contact Us</a>
-                    </div>
-                    <div class="footer-box border">
-                        <h3>Customer Service</h3>
-                        <a href="">Search</a>
-                        <br>
-                        <a href="">Recently viewed</a>
-                    </div>
-                    <div class="footer-box">
-                        <h3>My Account</h3>
-                        <a href="">My Account</a>
-                        <br>
-                        <a href="">Orders</a>
-                        <br>
-                        <a href="">Addresses</a>
-                        <br>
-                        <a href="">Shopping cart</a>
-                        <br>
-                        <a href="">Wishlist</a>
-                    </div>
-                </section>
-                <section class="footer-end">
-                    <a href="">
-                        <i class="fa-brands fa-facebook"></i>
-                    </a>
-                    <a href="">
-                        <i class="fa-brands fa-instagram"></i>
-                    </a>
-                    <p>Copyright &copy; 2025 Nature’s Veil. All rights reserved.</p>
-                </section>
-            </footer>
-            <script src="../js/shop.js"></script>
+            <section class="footer-end">
+                <a href="href=" https://www.facebook.com/naturesveilsa" target="_blank"">
+                    <i class=" fa-brands fa-facebook"></i>
+                </a>
+                <a href="href=" https://www.instagram.com/naturesveilsa" target="_blank"">
+                    <i class=" fa-brands fa-instagram"></i>
+                </a>
+                <p>Copyright &copy; 2025 Nature’s Veil. All rights reserved.</p>
+            </section>
+        </footer>
+        <script src="../js/shop.js"></script>
         <script src="../js/main.js"></script>
-        </body>
-    </html>
+</body>
+
+</html>
