--- a/terms.html
+++ b/terms.html
@@ -192,19 +192,11 @@
             <section class="footer-container">
                 <div class="footer-box border">
                     <h3>Information</h3>
-                    <a href="">Shipping</a>
+                    <a href="shipping.html">Shipping</a>
                     <br>
-                    <a href="">The Consumer Protection Act</a>
+                    <a href="terms.html">T & C</a>
                     <br>
-                    <a href="">T & C</a>
-                    <br>
-                    <a href="">Contact Us</a>
-                </div>
-                <div class="footer-box border">
-                    <h3>Customer Service</h3>
-                    <a href="">Search</a>
-                    <br>
-                    <a href="">Recently viewed</a>
+                    <a href="contact.html">Contact Us</a>
                 </div>
                 <div class="footer-box">
                     <h3>My Account</h3>
@@ -214,10 +206,10 @@
                 </div>
             </section>
             <section class="footer-end">
-                <a href="">
+                <a href="href="https://www.facebook.com/naturesveilsa" target="_blank"">
                     <i class="fa-brands fa-facebook"></i>
                 </a>
-                <a href="">
+                <a href="href="https://www.instagram.com/naturesveilsa" target="_blank"">
                     <i class="fa-brands fa-instagram"></i>
                 </a>
                 <p>Copyright &copy; 2025 Nature’s Veil. All rights reserved.</p>
