--- a/product pages/shakestrawberry.html
+++ b/product pages/shakestrawberry.html
@@ -87,46 +87,32 @@ Packed with plant-based protein, vitamins, and essential minerals, our Meal Repl
                 </div>
             </section>
             <footer>
-                <section class="footer-container">
-                    <div class="footer-box border">
-                        <h3>Information</h3>
-                        <a href="">Shipping</a>
-                        <br>
-                        <a href="">The Consumer Protection Act</a>
-                        <br>
-                        <a href="">T & C</a>
-                        <br>
-                        <a href="">Contact Us</a>
-                    </div>
-                    <div class="footer-box border">
-                        <h3>Customer Service</h3>
-                        <a href="">Search</a>
-                        <br>
-                        <a href="">Recently viewed</a>
-                    </div>
-                    <div class="footer-box">
-                        <h3>My Account</h3>
-                        <a href="">My Account</a>
-                        <br>
-                        <a href="">Orders</a>
-                        <br>
-                        <a href="">Addresses</a>
-                        <br>
-                        <a href="">Shopping cart</a>
-                        <br>
-                        <a href="">Wishlist</a>
-                    </div>
-                </section>
-                <section class="footer-end">
-                    <a href="">
-                        <i class="fa-brands fa-facebook"></i>
-                    </a>
-                    <a href="">
-                        <i class="fa-brands fa-instagram"></i>
-                    </a>
-                    <p>Copyright &copy; 2025 Nature’s Veil. All rights reserved.</p>
-                </section>
-            </footer>
+            <section class="footer-container">
+                <div class="footer-box border">
+                    <h3>Information</h3>
+                    <a href="../shipping.html">Shipping</a>
+                    <br>
+                    <a href="../terms.html">T & C</a>
+                    <br>
+                    <a href="../contact.html">Contact Us</a>
+                </div>
+                <div class="footer-box">
+                    <h3>My Account</h3>
+                    <a href="../account.html">My Account</a>
+                    <br>
+                    <a href="../cart.html">Shopping cart</a>
+                </div>
+            </section>
+            <section class="footer-end">
+                <a href="href=" https://www.facebook.com/naturesveilsa" target="_blank"">
+                    <i class=" fa-brands fa-facebook"></i>
+                </a>
+                <a href="href=" https://www.instagram.com/naturesveilsa" target="_blank"">
+                    <i class=" fa-brands fa-instagram"></i>
+                </a>
+                <p>Copyright &copy; 2025 Nature’s Veil. All rights reserved.</p>
+            </section>
+        </footer>
             <script src="../js/shop.js"></script>
         <script src="../js/main.js"></script>
         </body>
