--- a/cart.html
+++ b/cart.html
@@ -67,10 +67,10 @@
                 </div>
             </section>
             <section class="footer-end">
-                <a href="href="https://www.facebook.com/naturesveilsa" target="_blank"">
+                <a href="https://www.facebook.com/naturesveilsa" target="_blank">
                     <i class="fa-brands fa-facebook"></i>
                 </a>
-                <a href="href="https://www.instagram.com/naturesveilsa" target="_blank"">
+                <a href="https://www.instagram.com/naturesveilsa" target="_blank">
                     <i class="fa-brands fa-instagram"></i>
                 </a>
                 <p>Copyright &copy; 2025 Nature’s Veil. All rights reserved.</p>
