--- a/checkout.html
+++ b/checkout.html
@@ -1,120 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Nature's Veil | Checkout</title>
-        <link rel="stylesheet" href="css/style.css">
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
-            integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"
-        >
-    </head>
-    <body>
-        <header class="navbar">
-            <div class="container nav-container">
-                <img class="logo" src="images/logo/Modern_Wordmark_Logo_for_Nature_s_Veil__Design_2_-removebg-preview.png" alt="Nature's Veil Logo Image">
-                <div class="menu-toggle"><i class="fa-solid fa-bars"></i></div>
-                <nav class="nav-links">
-                    <a href="index.html">Home</a>
-                    <a href="shop.html">Shop</a>
-                    <a href="account.html" id="accountLink">My Account</a>
-                    <a href="cart.html">
-                        <i class="fa-solid fa-cart-shopping"></i>
-                        <span class="cart-count" id="cartCount">0</span>
-                    </a>
-                </nav>
-            </div>
-        </header>
-        <section class="checkout">
-            <div class="container">
-                <h2>Checkout</h2>
-                <form id="checkoutForm">
-                    <input
-                        type="text"
-                        name="name"
-                        placeholder="Full Name"
-                        required
-                    ><br>
-                    <input
-                        type="email"
-                        name="email"
-                        placeholder="Email"
-                        required
-                    ><br>
-                    <input
-                        type="text"
-                        name="address"
-                        placeholder="Address"
-                        required
-                    ><br>
-                    <input
-                        type="text"
-                        name="phone"
-                        placeholder="Phone Number"
-                        required
-                    >
-                    <h3>Cart Summary</h3>
-                    <div id="checkoutCart"></div>
-                    <p>
-                        Total:
-                        <span id="checkoutTotal"></span>
-                    </p>
-                    <button type="submit" class="btn-primary" id="placeOrderBtn">Place Order</button>
-                </form>
-            </div>
-        </section>
-        <footer>
-            <section class="footer-container">
-                <div class="footer-box border">
-                    <h3>Information</h3>
-                    <a href="shipping.html">Shipping</a>
-                    <br>
-                    <a href="terms.html">T & C</a>
-                    <br>
-                    <a href="contact.html">Contact Us</a>
-                </div>
-                <div class="footer-box">
-                    <h3>My Account</h3>
-                    <a href="account.html">My Account</a>
-                    <br>
-                    <a href="cart.html">Shopping cart</a>
-                </div>
-            </section>
-            <section class="footer-end">
-                <a href="href="https://www.facebook.com/naturesveilsa" target="_blank"">
-                    <i class="fa-brands fa-facebook"></i>
-                </a>
-                <a href="href="https://www.instagram.com/naturesveilsa" target="_blank"">
-                    <i class="fa-brands fa-instagram"></i>
-                </a>
-                <p>Copyright &copy; 2025 Nature’s Veil. All rights reserved.</p>
-            </section>
-        </footer>
-        <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const checkoutCart = document.getElementById('checkoutCart');
-      const checkoutTotal = document.getElementById('checkoutTotal');
-      const cart = JSON.parse(localStorage.getItem('cart')) || [];
-      let total = 0;
-      cart.forEach(item => {
-        checkoutCart.innerHTML += `<p>${item.name} x${item.qty} - R${(item.price*item.qty).toFixed(2)}</p>`;
-        total += item.price*item.qty;
-      });
-      checkoutTotal.textContent = `R${total.toFixed(2)}`;
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Nature's Veil | Checkout</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
+    <!-- ===== HEADER / NAV ===== -->
+    <header class="navbar">
+      <div class="container nav-container">
+        <img
+          class="logo"
+          src="images/logo/Modern_Wordmark_Logo_for_Nature_s_Veil__Design_2_-removebg-preview.png"
+          alt="Nature's Veil Logo"
+        />
+        <div class="menu-toggle"><i class="fa-solid fa-bars"></i></div>
+        <nav class="nav-links">
+          <a href="index.html">Home</a>
+          <a href="shop.html">Shop</a>
+          <a href="account.html" id="accountLink">My Account</a>
+          <a href="cart.html">
+            <i class="fa-solid fa-cart-shopping"></i>
+            <span class="cart-count" id="cartCount">0</span>
+          </a>
+        </nav>
+      </div>
+    </header>
 
-      document.getElementById('checkoutForm').addEventListener('submit', e => {
-        e.preventDefault();
-        alert('Order placed! (Demo only)');
-        localStorage.removeItem('cart');
-        window.location.href = 'index.html';
-      });
-    });
-        </script>
-        <script src="js/main.js"></script>
-        <script src="js/checkout.js"></script>
-    </body>
+    <!-- ===== CHECKOUT SECTION ===== -->
+    <section class="checkout">
+      <div class="container">
+        <h2>Checkout</h2>
+
+        <!-- Cart Items Display -->
+        <div id="checkout-items" class="checkout-items"></div>
+
+        <!-- Delivery Notice -->
+        <div id="delivery-notice" class="delivery-notice"></div>
+
+        <!-- Summary Section -->
+        <div class="summary-box">
+          <h3>Order Summary</h3>
+          <div class="summary">
+            <p>Subtotal: <span id="summary-subtotal">R0.00</span></p>
+            <p>Delivery: <span id="summary-delivery">R0.00</span></p>
+            <hr />
+            <p><strong>Total: <span id="summary-total">R0.00</span></strong></p>
+          </div>
+        </div>
+
+        <!-- Checkout Form -->
+        <form id="checkoutForm" class="checkout-form">
+          <h3>Delivery Details</h3>
+
+          <input type="text" id="name" name="name" placeholder="Full Name" required />
+          <input type="email" id="email" name="email" placeholder="Email" required />
+          <textarea id="address" name="address" placeholder="Delivery Address" required></textarea>
+          <input type="text" id="phone" name="phone" placeholder="Phone Number" required />
+
+          <h3>Payment Method</h3>
+          <div class="payment-options">
+            <label>
+              <input type="radio" name="payment" value="Card" required />
+              Card
+            </label>
+            <label>
+              <input type="radio" name="payment" value="EFT" />
+              EFT
+            </label>
+            <label>
+              <input type="radio" name="payment" value="Cash on Delivery" />
+              Cash on Delivery
+            </label>
+          </div>
+
+          <button type="submit" class="btn-primary">Place Order</button>
+        </form>
+      </div>
+    </section>
+
+    <!-- ===== FOOTER ===== -->
+    <footer>
+      <section class="footer-container">
+        <div class="footer-box border">
+          <h3>Information</h3>
+          <a href="shipping.html">Shipping</a><br />
+          <a href="terms.html">T & C</a><br />
+          <a href="contact.html">Contact Us</a>
+        </div>
+
+        <div class="footer-box">
+          <h3>My Account</h3>
+          <a href="account.html">My Account</a><br />
+          <a href="cart.html">Shopping Cart</a>
+        </div>
+      </section>
+
+      <section class="footer-end">
+        <a href="https://www.facebook.com/naturesveilsa" target="_blank">
+          <i class="fa-brands fa-facebook"></i>
+        </a>
+        <a href="https://www.instagram.com/naturesveilsa" target="_blank">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <p>Copyright &copy; 2025 Nature’s Veil. All rights reserved.</p>
+      </section>
+    </footer>
+
+    <!-- ===== SCRIPTS ===== -->
+    <script src="js/main.js"></script>
+    <script src="js/checkout.js"></script>
+  </body>
 </html>
