--- a/product pages/d3k3.html
+++ b/product pages/d3k3.html
@@ -104,10 +104,10 @@ A powerful duo — D3 helps your body absorb calcium, while K2 directs it where 
                 </div>
             </section>
             <section class="footer-end">
-                <a href="href=" https://www.facebook.com/naturesveilsa" target="_blank"">
+                <a href="https://www.facebook.com/naturesveilsa" target="_blank">
                     <i class=" fa-brands fa-facebook"></i>
                 </a>
-                <a href="href=" https://www.instagram.com/naturesveilsa" target="_blank"">
+                <a href="https://www.instagram.com/naturesveilsa" target="_blank">
                     <i class=" fa-brands fa-instagram"></i>
                 </a>
                 <p>Copyright &copy; 2025 Nature’s Veil. All rights reserved.</p>
