--- a/product pages/daycream.html
+++ b/product pages/daycream.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Nature's Veil | Day Cream</title>
         <link rel="stylesheet" href="../css/style.css">
         <script src="https://kit.fontawesome.com/a2e0e9d6a8.js" crossorigin="anonymous"></script>
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
             integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"
-        >
+            crossorigin="anonymous" referrerpolicy="no-referrer">
     </head>
+
     <body>
         <!-- Navbar -->
         <header class="navbar">
             <div class="container nav-container">
-                <img class="logo" src="../images/logo/Modern_Wordmark_Logo_for_Nature_s_Veil__Design_2_-removebg-preview.png" alt="Nature's Veil Logo Image">
+                <img class="logo"
+                    src="../images/logo/Modern_Wordmark_Logo_for_Nature_s_Veil__Design_2_-removebg-preview.png"
+                    alt="Nature's Veil Logo Image">
                 <div class="menu-toggle">
                     <i class="fa-solid fa-bars"></i>
                 </div>
@@ -33,40 +33,44 @@
                 </nav>
             </div>
         </header>
-        <!-- Product Section -->
-        <section class="product-page">
-            <div class="container product-container">
-                <!-- Product Gallery -->
-                <div class="product-gallery">
-                    <img id="mainImage" src="../images/products/Nature's Veil Day cream.png" alt="Day cream image-1">
-                </div>
-                <!-- Product Info -->
-                <div class="product-info">
-                    <h2>Day Cream</h2>
-                    <p class="price">R209.00</p>
-                    <p class="description">
-                        Light, nourishing protection for your daily glow.
-Infused with botanical extracts and natural antioxidants, our Day Cream deeply hydrates while shielding skin from everyday stressors. The lightweight texture absorbs quickly, leaving your complexion smooth, supple, and softly luminous all day long.
-                    </p>
-                    <button class="btn-add">Add to Cart</button>
-                    <!-- Ratings -->
-                    <div class="ratings">
-                        <span>⭐️⭐️⭐️⭐️☆</span>
-                        <p>4 reviews</p>
+        <main>
+            <!-- Product Section -->
+            <section class="product-page">
+                <div class="container product-container">
+                    <!-- Product Gallery -->
+                    <div class="product-gallery">
+                        <img id="mainImage" src="../images/products/Nature's Veil Day cream.png" alt="Day cream image-1">
                     </div>
-                    <!-- Reviews -->
-                    <div class="reviews">
-                        <div class="review">
-                            <strong>Jane D.</strong>
-                            <p>Lightweight but super hydrating. I use it under makeup and it gives me a healthy glow.</p>
+                    <!-- Product Info -->
+                    <div class="product-info">
+                        <h2>Day Cream</h2>
+                        <p class="price">R209.00</p>
+                        <p class="description">
+                            Light, nourishing protection for your daily glow.
+                            Infused with botanical extracts and natural antioxidants, our Day Cream deeply hydrates while
+                            shielding skin from everyday stressors. The lightweight texture absorbs quickly, leaving your
+                            complexion smooth, supple, and softly luminous all day long.
+                        </p>
+                        <button class="btn-add">Add to Cart</button>
+                        <!-- Ratings -->
+                        <div class="ratings">
+                            <span>⭐️⭐️⭐️⭐️☆</span>
+                            <p>4 reviews</p>
                         </div>
-                        <div class="review">
-                            <strong>Emma R.</strong>
-                            <p>Absorbs fast and smells amazing. My skin doesn’t get oily anymore during the day.</p>
+                        <!-- Reviews -->
+                        <div class="reviews">
+                            <div class="review">
+                                <strong>Jane D.</strong>
+                                <p>Lightweight but super hydrating. I use it under makeup and it gives me a healthy glow.</p>
+                            </div>
+                            <div class="review">
+                                <strong>Emma R.</strong>
+                                <p>Absorbs fast and smells amazing. My skin doesn’t get oily anymore during the day.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
             <!-- Suggested Products -->
             <section class="suggested">
                 <h3>You may also like</h3>
@@ -94,7 +98,8 @@ Infused with botanical extracts and natural antioxidants, our Day Cream deeply h
                     </div>
                 </div>
             </section>
-            <footer>
+        </main>    
+        <footer>
             <section class="footer-container">
                 <div class="footer-box border">
                     <h3>Information</h3>
@@ -112,16 +117,16 @@ Infused with botanical extracts and natural antioxidants, our Day Cream deeply h
                 </div>
             </section>
             <section class="footer-end">
-                <a href="href=" https://www.facebook.com/naturesveilsa" target="_blank"">
-                    <i class=" fa-brands fa-facebook"></i>
+                <a href="https://www.facebook.com/naturesveilsa" target="_blank">
+                        <i class=" fa-brands fa-facebook"></i>
                 </a>
-                <a href="href=" https://www.instagram.com/naturesveilsa" target="_blank"">
-                    <i class=" fa-brands fa-instagram"></i>
+                <a href="https://www.instagram.com/naturesveilsa" target="_blank">
+                        <i class=" fa-brands fa-instagram"></i>
                 </a>
                 <p>Copyright &copy; 2025 Nature’s Veil. All rights reserved.</p>
             </section>
         </footer>
-            <script src="../js/shop.js"></script>
-            <script src="../js/main.js"></script>
-        </body>
-    </html>
+        <script src="../js/shop.js"></script>
+        <script src="../js/main.js"></script>
+    </body>
+</html>
