--- a/product pages/zinc.html
+++ b/product pages/zinc.html
@@ -104,10 +104,10 @@ Zinc is vital for a healthy immune response and skin regeneration. Our easy-to-a
                 </div>
             </section>
             <section class="footer-end">
-                <a href="href=" https://www.facebook.com/naturesveilsa" target="_blank"">
+                <a href="https://www.facebook.com/naturesveilsa" target="_blank">
                     <i class=" fa-brands fa-facebook"></i>
                 </a>
-                <a href="href=" https://www.instagram.com/naturesveilsa" target="_blank"">
+                <a href="https://www.instagram.com/naturesveilsa" target="_blank">
                     <i class=" fa-brands fa-instagram"></i>
                 </a>
                 <p>Copyright &copy; 2025 Nature’s Veil. All rights reserved.</p>
